chap 1 mostly done

--- a/content/01/05_jupyterlab.ipynb
+++ b/content/01/05_jupyterlab.ipynb
@@ -176,7 +176,7 @@
     "The [help and documentation](https://jakevdp.github.io/PythonDataScienceHandbook/01.01-help-and-documentation.html) section of the \"Python Data Science Handbook\" by Jake VanderPlas begins by saying:\n",
     "\n",
     "```{margin}\n",
-    "He uses \"IPython\" here. This is Jupyter Lab, a few generations ago.\n",
+    "He uses \"IPython\" here. IPython is what became Jupyter Lab.\n",
     "```\n",
     "\n",
     "> **If you read no other section in this chapter, read this one: I find the tools discussed here to be the most transformative contributions of IPython to my daily workflow.**\n",
@@ -214,16 +214,40 @@
     "Currently installed extensions (which you can see by clicking the \"puzzle\" icon on the left sidebar menu):\n",
     "\n",
     "- @ijmbarr/jupyterlab_spellchecker (can directly install from the \"extensions menu\")\n",
+    "    - Or via a powershell terminal: `conda install -c conda-forge jupyterlab-spellchecker`\n",
     "    - Mac users: Your TA had to install node.js in order to install the spell checker extension. MacOS users who also installed homebrew can install this in terminal via `brew install node` . \n",
-    "- nbdime-jupyterlab  (can directly install from the \"extensions menu\")\n",
+    "- @jupyter-widgets/jupyterlab-manager    \n",
     "\n",
     "Extensions I like, but are not currently installed for one reason or another\n",
     "- variableInspector: helps you see inside of data objects which is amazing, but has special install instructions\n",
     "- jupyterlab-system-monitor: helps you see how much of your CPU and meory are in use\n",
-    "- toc (table of contents, helps explore files quicker, but is default installed in latest JLab\n",
+    "- nbdime-jupyterlab  (can directly install from the \"extensions menu\")\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How do I copy chunks of lecture files into my own code?\n",
+    "\n",
+    "I think this is the easiest way:\n",
+    "1. Clone the lecture repo to your computer.\n",
+    "2. Open the code you're working on in Jupyter Lab.\n",
+    "3. Open the lecture code you're working on in Jupyter Lab in a new tab in Jupyter Lab.\n",
+    "4. Drag the lecture code \"tab\" to the right until it snaps into a new panel. \n",
+    "5. Click and hold to the **left** of the block you want to drag into your code and drag it into your code.\n",
+    "\n",
+    "```{admonition} Pro Tip\n",
+    ":class: tip\n",
+    "You can select a bunch of code blocks and drag them all at once. To do that, click to the left of a cell you want, hold the shift button, and then click the up or down arrow on your keyboard until all the cells you want are highlighted. Then do step 5 above.\n",
+    "```\n",
+    "\n",
+    "Want another amateur youtube video? Here's one of me showing those steps!\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/0XtS-pI9tR8\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
    ]
   },
   {
