--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -755,34 +755,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Popular, nay, essential packages\n",
-    "\n",
-    "As the semester proceeds, you will surely need to learn (to some degree) the following packages. **For each, you might note the most common and useful functions, and copy \"cookbook\" uses of the packages which you can paste into new programs.** (E.g. how to open a csv file.)\n",
-    "\n",
-    "_Note: I do not personally, nor do many programmers, commit to memory many functions of many packages. We simply **know what can be done** and when needed, we search (tab completion/google/stack overflow) for the command/recipe for that function._\n",
-    "\n",
-    "- Built-in packages:`os` `sys` `itertools` `re` `datetime` `csv`\n",
-    "- Datasci packages (Anaconda installs these for you!), note the aliases here aren't strictly needed, but by convention, virtually everyone uses the shorter names\n",
-    "    - `pandas as pd` \n",
-    "    - `seaborn as sns`\n",
-    "    - `matplotlib as mpl`\n",
-    "    - `statsmodels.api as sm` \n",
-    "    - `matplotlib.pyplot as plt`\n",
-    "    - `numpy as np`\n",
-    "    - `sklearn`\n",
-    "- Web crawling\n",
-    "    - `requests`, `requests_html`, `urllib`\n",
-    "    - `time` and `tdqm`\n",
-    "    - `beautifulsoup4 as bs4` \n",
-    "    - `html5lib`\n",
-    "    - `selenium`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Clear output and rerun from the start!\n",
     "\n",
@@ -805,30 +781,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How do I...?\n",
+    "## Stuck on syntax issues for a function? \n",
     "\n",
-    "### Stuck on syntax issues for a function? \n",
-    "\n",
-    "See the tips in the [Jupyter Lab](05_jupyterlab#resources) page.\n",
-    "\n",
-    "(content:chunkcopy)=\n",
-    "### Copy chunks of lecture files into my own code?\n",
-    "\n",
-    "I think this is the easiest way:\n",
-    "1. Clone the lecture repo to your computer.\n",
-    "2. Open the code you're working on in Jupyter Lab.\n",
-    "3. Open the lecture code you're working on in Jupyter Lab in a new tab.\n",
-    "4. Drag the lecture code to the right until it snaps into a new panel. \n",
-    "5. Click and hold to the **left** of the block you want to drag into your code and drag it into your code.\n",
-    "\n",
-    "```{admonition} Pro Tip\n",
-    ":class: tip\n",
-    "You can select a bunch of code blocks and drag them all at once. To do that, click to the left of a cell you want, hold the shift button, and then click up or down until all the cells you want are highlighted. Then do step 5 above.\n",
-    "```\n",
-    "\n",
-    "Want another amateur youtube video? Here's one of me showing those steps!\n",
-    "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/0XtS-pI9tR8\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
+    "See the tips in the [Jupyter Lab](05_jupyterlab#resources) page.\n"
    ]
   }
  ],
