--- a/content/01/07_debugging.ipynb
+++ b/content/01/07_debugging.ipynb
@@ -32,8 +32,9 @@
     "[This website-tutorialsteacher](https://www.tutorialsteacher.com/python/error-types-in-python) has a nice page listing the most common error types. If you get an error and aren't sure what it means, refer to this link as a starting point.\n",
     "```\n",
     "\n",
+    "Really, error codes tend to be informative! You can google them for more info, but even without Google, they often point directly at the issue _and_ location. \n",
     "\n",
-    "Really, they tend to be informative! You can google them for more info, but even without Google, they often point directly at the issue _and_ location. \n",
+    "I created a short [walkthrough of the types of errors here.](07a_errors)\n",
     "\n",
     "### `%debug`\n",
     "\n",
@@ -186,10 +187,13 @@
    "source": [
     "**Suppose you have a large dataset you want to explore. What can you do to look at it?**\n",
     "\n",
-    "Here are some \n",
+    "Here are some options: \n",
     "1. Print parts of it in Jupyter, along with many summary stats. \n",
+    "1. Look at the dataset using [variableInspector](05_jupyterlab#my-jupyter-lab-set-up).\n",
+    "    - Warning: If your dataset is large enough, using variableInspector can significantly slow down your computer and force you to do a hard reset. \n",
+    "    - Workaround: Copy a smaller slice of the data to a new, smaller variable, and then look at that slice using variableInspector. \n",
     "2. Output to a csv file and open in Excel.\n",
-    "3. Use the `spyder` program that came with Anaconda. Spyder has a UI that is more like Matlab or Stata, and so you can view and scroll through objects in memory like they are in Excel _as you build your code_. This can be very, very useful for developing code. In fact, Spyder is how most of my own research code is written. Spyder currently does not allow you to use Markdown. \n",
+    "3. Use the `spyder` program that came with Anaconda. Spyder has a UI that is more like Matlab or Stata, and so you can view and scroll through objects in memory. This can be very, very useful for developing code. In fact, Spyder is how most of my own research code is written.  \n",
     "\n",
     "If you have a dataset in Jupyter you want to open in Spyder, you can either \n",
     "- save the object from Jupyter (via the `pickle` module) and open it in Spyder,\n",
@@ -224,15 +228,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Clear output and rerun from the start!\n",
     "\n",
-    "Code must run from beginning to end and produce the same thing every time\n",
-    "- Restart the kernal and clear output\n",
-    "- Run all cells\n",
+    "_(Yes, I'm copying this from the prior page. It's important!)_\n",
     "\n",
+    "```{warning}\n",
+    "I can NOT emphasize this enough: The point of code is to make things reproducible. So code must run from beginning to end and produce the same thing every time.\n",
+    "```\n",
+    "The nature of developing code is that you'll run some lines of code, then write more code, then go back and change something above (and run that part again), and then go back down and keep writing and running new code. When you're done, your code will be broken!\n",
+    "\n",
+    "```{admonition} **A golden rule**\n",
+    ":class: tip\n",
+    "\n",
+    "1. Always look to see if the first executed code block is \"\\[1\\]\" and that all the subsequent code blocks are numbered consecutively. [Click on this link to see an example.](out_of_order1)\n",
+    "1. If the code you're looking at doesn't meet those two rules, I click \"Run\" > \"Restart Kernel and Run All Cells\".\n",
+    "1. This applies to your own code! Restart and run from scratch regularly.\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Did you follow these tips and fix your code?\n",
+    "\n",
+    "Congrats!\n",
     "\n",
     "![](https://media.giphy.com/media/5tov263RmYEpPYmcuB/giphy.gif)\n"
    ]
