--- a/_sources/content/01/05_jupyterlab.ipynb
+++ b/_sources/content/01/05_jupyterlab.ipynb
@@ -256,7 +256,7 @@
    "source": [
     "## Credits\n",
     "\n",
-    "This lecture borrowed from the first chapter of the [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) and [QuantEcon](https://python.quantecon.org/index_learning_python.html). \n",
+    "This page borrows from the first chapter of the [Python Data Science Handbook](https://jakevdp.github.io/PythonDataScienceHandbook/index.html) and [QuantEcon](https://python.quantecon.org/index_learning_python.html). \n",
     "\n"
    ]
   }
