--- a/content/02/10_Golden_1.ipynb
+++ b/content/02/10_Golden_1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Golden Rules (for Projects and Programs)\n",
     "\n",
-    "The goal of this class is to give you a set of rules, guidance, and some hard-earned wisdom to help you write better programs and develop better projects. \n",
+    "The goal of this chapter is to give you a set of rules, guidance, and some hard-earned wisdom to help you write better programs and develop better projects. \n",
     "\n",
     "I've spent more hours of my life fixing bad programs and issues caused by project management mistakes than I have spent watching the Detroit Lions be awful. So, please, let me help you avoid that tragedy! Don't let the Lions _**OR**_ bad project/program habits ruin your Thanksgiving!\n",
     "\n",
