--- a/content/03/01d_NumpyResources.ipynb
+++ b/content/03/01d_NumpyResources.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "A: You're right! I'm speeding past Numpy because\n",
     "1. We're going to use `pandas` mostly, and most of our numpy usage will be _implicit_ numpy usage within pandas. \n",
-    "2. There is such good tutorials online. Instead of copy-pasting the definitive materials, let me point you to the place:\n",
+    "2. There are really good tutorials online. Instead of copy-pasting the definitive materials, let me point you to the places you might look:\n",
     "\n",
     "- [NumPy quickstart](https://numpy.org/doc/stable/user/quickstart.html)\n",
     "- [NumPy: the absolute basics for beginners](https://numpy.org/doc/stable/user/absolute_beginners.html)\n",
@@ -20,14 +20,14 @@
     "\n",
     "\"But, but... couldn't we do lots of _finance_ stuff in numpy?\"\n",
     "\n",
-    "Absolutely. Anytime you're using matrices, numpy is probably what you should be using. It happens that this finance class will not emphasize simulations or derivatives, which are just two finance settings where numpy shines. \n",
+    "Absolutely! Anytime you're using matrices, numpy is probably what you should be using. It just so happens that this finance class will not emphasize simulations or derivatives, which are two finance settings where numpy shines. \n",
     "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -41,7 +41,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
