--- a/_sources/content/03/02a_pandasTips.ipynb
+++ b/_sources/content/03/02a_pandasTips.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "1. Develop and save your \"cookbooks\" for common operations you run into. \n",
     "2. **Knowing about possible operations, and when and why to use them is more important than memorizing syntax!** [^knowing]\n",
-    "    - [the official pandas tutorials](https://pandas.pydata.org/pandas-docs/stable/getting_started/index.html#intro-to-pandas) are oriented areound solving specific tasks\n",
+    "    - [the official pandas tutorials](https://pandas.pydata.org/pandas-docs/stable/getting_started/index.html#intro-to-pandas) are oriented around solving specific tasks\n",
     "1. This chapter contains a lot of informational tables and code snippets; **read it at least twice**. Once to understand _when and why_ to run a given function, and once to dig into the syntax. \n",
     "3. I cover only the most essential functions. Make sure to bookmark (and visit, these pages are very useful!)\n",
     "    - [getting started with pandas tutorials](https://pandas.pydata.org/pandas-docs/stable/getting_started/index.html#intro-to-pandas)\n",
@@ -37,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
