--- a/content/05/05_thefuture.ipynb
+++ b/content/05/05_thefuture.ipynb
@@ -14,8 +14,13 @@
     "\n",
     "Thinking both about you-and-data-science, and you-and-me...\n",
     "\n",
-    "![](https://media.giphy.com/media/f41oBFWHe3uro7Inqr/giphy.gif) \n",
-    "\n",
+    "![](https://media.giphy.com/media/f41oBFWHe3uro7Inqr/giphy.gif) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Faster, better, stronger\n",
     "\n",
     "Students often ask about how they can grow their skills after this semester. \n",
@@ -30,8 +35,13 @@
     "\n",
     "Your projects don't have to be finance-related. (My initial python projects weren't!) Maybe it's about your love of some game (e.g. basketball), or tv/movies/books, or sports. Just pick something that sounds fun. \n",
     "\n",
-    "[The website resources](https://ledatascifi.github.io/ledatascifi-2021/content/about/resources.html#resources-tutorials-and-data) has lots of good stuff to explore, but I'd also recommend meandering the links on [this page, including \"fecon\"](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks#economics-and-finance).\n",
-    "\n",
+    "[The website resources](https://ledatascifi.github.io/ledatascifi-2021/content/about/resources.html#resources-tutorials-and-data) has lots of good stuff to explore, but I'd also recommend meandering the links on [this page, including \"fecon\"](https://github.com/jupyter/jupyter/wiki/A-gallery-of-interesting-Jupyter-Notebooks#economics-and-finance)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dashboards - A Really Fun Project Idea\n",
     "\n",
     "```{tip}\n",
@@ -50,13 +60,35 @@
     "\n",
     "\n",
     "\n",
-    "  \n"
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving Your Work\n",
+    "\n",
+    "At the end of each semester, I reset the GitHub organization to make way for the students in next year's class. \n",
+    "\n",
+    "This removes you from the org, and importantly: **It removes your assignment repos from GitHub.com!**\n",
+    "\n",
+    "```{tip}\n",
+    "So to save your work, you should make sure you've downloaded/cloned all of your assignment repos! \n",
+    "```\n",
+    "\n",
+    "If you want to sync your work back up to your own GitHub account to ensure you have a backup, the video below will show you how. \n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/poS4ngZZQjc\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -70,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
