code checks, winsorization page revolution

--- a/content/03/02i_answers.ipynb
+++ b/content/03/02i_answers.ipynb
@@ -62,19 +62,19 @@
      "text": [
       "                  GDP  CPIAUCSL  UNRATE\n",
       "DATE                                   \n",
-      "2017-01-01  19237.435   243.620     4.7\n",
+      "2017-01-01  19153.912   243.620     4.7\n",
       "2017-02-01        NaN   243.872     4.6\n",
       "2017-03-01        NaN   243.766     4.4\n",
-      "2017-04-01  19379.232   244.274     4.5\n",
+      "2017-04-01  19322.920   244.274     4.5\n",
       "2017-05-01        NaN   244.069     4.4 \n",
       "---\n",
       "                  GDP  CPIAUCSL  UNRATE\n",
       "DATE                                   \n",
       "2020-09-01        NaN   260.149     7.8\n",
-      "2020-10-01  21479.529   260.462     6.9\n",
+      "2020-10-01  21477.597   260.462     6.9\n",
       "2020-11-01        NaN   260.927     6.7\n",
       "2020-12-01        NaN   261.560     6.7\n",
-      "2021-01-01        NaN   262.231     6.3 \n",
+      "2021-01-01  22038.226   262.231     6.3 \n",
       "---\n",
       "Index(['GDP', 'CPIAUCSL', 'UNRATE'], dtype='object') \n",
       "---\n",
@@ -86,7 +86,7 @@
       "Data columns (total 3 columns):\n",
       " #   Column    Non-Null Count  Dtype  \n",
       "---  ------    --------------  -----  \n",
-      " 0   GDP       16 non-null     float64\n",
+      " 0   GDP       17 non-null     float64\n",
       " 1   CPIAUCSL  49 non-null     float64\n",
       " 2   UNRATE    49 non-null     float64\n",
       "dtypes: float64(3)\n",
@@ -94,26 +94,26 @@
       "Info: None \n",
       "---\n",
       "                GDP    CPIAUCSL     UNRATE\n",
-      "count     16.000000   49.000000  49.000000\n",
-      "mean   20630.206313  252.878469   5.034694\n",
-      "std      862.963655    5.557894   2.524179\n",
-      "min    19237.435000  243.620000   3.500000\n",
-      "25%    19857.794250  248.721000   3.800000\n",
-      "50%    20826.288000  252.899000   4.000000\n",
-      "75%    21367.290000  257.387000   4.500000\n",
-      "max    21747.394000  262.231000  14.800000 \n",
+      "count     17.000000   49.000000  49.000000\n",
+      "mean   20654.744824  252.878469   5.034694\n",
+      "std      913.690696    5.557894   2.524179\n",
+      "min    19153.912000  243.620000   3.500000\n",
+      "25%    19882.965000  248.721000   3.800000\n",
+      "50%    20813.325000  252.899000   4.000000\n",
+      "75%    21477.597000  257.387000   4.500000\n",
+      "max    22038.226000  262.231000  14.800000 \n",
       "---\n",
       "UNRATE has 22 values and its top 10 most common are:\n",
       "3.8    7\n",
-      "4.0    5\n",
       "3.6    5\n",
+      "4.0    5\n",
       "4.4    4\n",
       "3.7    4\n",
-      "3.5    3\n",
       "4.1    3\n",
-      "4.2    2\n",
-      "4.3    2\n",
+      "3.5    3\n",
       "6.7    2\n",
+      "4.3    2\n",
+      "4.2    2\n",
       "Name: UNRATE, dtype: int64 \n",
       "---\n"
      ]
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "0.030766069353016783"
+       "0.03067733411159815"
       ]
      },
      "execution_count": 3,
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "0.030766069353016783"
+       "0.03067733411159815"
       ]
      },
      "execution_count": 4,
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "GDPCA    0.030766\n",
+       "GDPCA    0.030677\n",
        "dtype: float64"
       ]
      },
@@ -282,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "0.030766069353016783"
+       "0.03067733411159815"
       ]
      },
      "execution_count": 6,
@@ -324,7 +324,7 @@
     {
      "data": {
       "text/plain": [
-       "0.030766069353016783"
+       "0.03067733411159815"
       ]
      },
      "execution_count": 7,
@@ -356,9 +356,9 @@
        "1960.0    0.047426\n",
        "1970.0    0.032352\n",
        "1980.0    0.031240\n",
-       "1990.0    0.032220\n",
-       "2000.0    0.019099\n",
-       "2010.0    0.023165\n",
+       "1990.0    0.032261\n",
+       "2000.0    0.019175\n",
+       "2010.0    0.022464\n",
        "Name: real_gdp_pct, dtype: float64"
       ]
      },
@@ -413,49 +413,49 @@
       "\n",
       "      CAUR  MIUR  PAUR      LXXRSA      DEXRSA      WDXRSA  MEHOINUSCAA672N  \\\n",
       "DATE                                                                          \n",
-      "1990   5.2   7.8   5.1  100.471193         NaN   93.362855          63333.0   \n",
-      "1991   7.1   8.8   6.6   95.569015   58.420806   89.706871          61797.0   \n",
-      "1992   8.5   9.4   7.5   92.786926   59.748947   88.573807          62517.0   \n",
-      "1993   9.7   7.6   7.3   85.246295   61.564205   89.065118          59529.0   \n",
-      "1994   9.2   7.1   6.6   77.395052   64.526663   88.988467          60464.0   \n",
-      "1995   7.7   5.2   5.8   76.376389   68.973289   89.670303          61846.0   \n",
-      "1996   7.7   4.9   5.9   73.919989   73.582339   88.655369          63176.0   \n",
-      "1997   6.8   4.7   5.3   74.536884   79.347642   88.775224          63245.0   \n",
-      "1998   6.0   4.0   4.7   81.035037   85.183613   90.108149          64349.0   \n",
-      "1999   5.6   3.9   4.5   92.140086   92.433567   94.188054          67156.0   \n",
-      "2000   5.0   3.3   4.1  101.031209  100.145625  100.871832          69696.0   \n",
-      "2001   4.8   4.4   4.3  112.031476  107.327208  113.794411          68413.0   \n",
-      "2002   6.5   6.4   5.5  122.706507  111.468549  127.245701          67600.0   \n",
-      "2003   6.8   6.6   5.8  145.752401  115.704198  146.676851          68695.0   \n",
-      "2004   6.5   6.8   5.5  178.773752  119.772720  169.535303          66782.0   \n",
-      "2005   5.8   7.2   5.2  221.471364  123.264823  210.799937          67918.0   \n",
-      "2006   5.0   6.8   4.7  268.208844  126.872678  250.272528          70316.0   \n",
-      "2007   4.9   6.9   4.3  270.804920  118.163891  241.411126          68890.0   \n",
-      "2008   6.0   7.1   4.7  226.111966  100.378575  215.656581          67865.0   \n",
-      "2009   9.7  10.9   7.0  167.831216   77.690858  174.183926          67051.0   \n",
+      "1990   5.2   7.7   5.2  100.471193         NaN   93.362855          64124.0   \n",
+      "1991   7.1   8.8   6.5   95.569015   58.420806   89.706871          62568.0   \n",
+      "1992   8.6   9.5   7.4   92.786926   59.748947   88.573807          63297.0   \n",
+      "1993   9.8   7.6   7.2   85.246295   61.564205   89.065118          60272.0   \n",
+      "1994   9.3   7.2   6.7   77.395052   64.526663   88.988467          61219.0   \n",
+      "1995   7.8   5.2   5.7   76.376389   68.973289   89.670303          62618.0   \n",
+      "1996   7.8   4.9   5.9   73.919989   73.582339   88.655369          63965.0   \n",
+      "1997   6.9   4.7   5.3   74.536884   79.347642   88.775224          64035.0   \n",
+      "1998   6.0   4.0   4.8   81.035037   85.183613   90.108149          65153.0   \n",
+      "1999   5.6   4.0   4.5   92.140086   92.433567   94.188054          67994.0   \n",
+      "2000   5.0   3.3   4.2  101.031209  100.145625  100.871832          70566.0   \n",
+      "2001   4.8   4.4   4.3  112.031476  107.327208  113.794411          69267.0   \n",
+      "2002   6.6   6.3   5.5  122.706507  111.468549  127.245701          68444.0   \n",
+      "2003   6.9   6.5   5.8  145.752401  115.704198  146.676851          69553.0   \n",
+      "2004   6.6   6.7   5.4  178.773750  119.772720  169.535303          67616.0   \n",
+      "2005   5.8   7.2   5.2  221.471348  123.264823  210.799935          68766.0   \n",
+      "2006   5.0   6.8   4.8  268.208801  126.872677  250.272523          71194.0   \n",
+      "2007   4.9   7.0   4.4  270.804836  118.163888  241.411114          69750.0   \n",
+      "2008   5.9   7.2   4.8  226.111844  100.378575  215.656550          68712.0   \n",
+      "2009   9.9  10.9   7.0  167.831065   77.690839  174.183883          67888.0   \n",
       "\n",
       "      MEHOINUSMIA672N  MEHOINUSPAA672N  \n",
       "DATE                                    \n",
-      "1990          56954.0          55181.0  \n",
-      "1991          58957.0          55744.0  \n",
-      "1992          57795.0          53523.0  \n",
-      "1993          57064.0          54151.0  \n",
-      "1994          60384.0          54877.0  \n",
-      "1995          60872.0          57693.0  \n",
-      "1996          63849.0          56807.0  \n",
-      "1997          61728.0          59776.0  \n",
-      "1998          65744.0          61333.0  \n",
-      "1999          70942.0          58119.0  \n",
-      "2000          67755.0          62789.0  \n",
-      "2001          65206.0          62966.0  \n",
-      "2002          60871.0          60562.0  \n",
-      "2003          62734.0          59823.0  \n",
-      "2004          57331.0          59841.0  \n",
-      "2005          60278.0          60760.0  \n",
-      "2006          61835.0          61619.0  \n",
-      "2007          61024.0          59870.0  \n",
-      "2008          59264.0          61185.0  \n",
-      "2009          54939.0          57540.0  \n",
+      "1990          57665.0          55870.0  \n",
+      "1991          59693.0          56440.0  \n",
+      "1992          58517.0          54191.0  \n",
+      "1993          57776.0          54827.0  \n",
+      "1994          61138.0          55562.0  \n",
+      "1995          61632.0          58413.0  \n",
+      "1996          64646.0          57516.0  \n",
+      "1997          62499.0          60523.0  \n",
+      "1998          66564.0          62098.0  \n",
+      "1999          71828.0          58844.0  \n",
+      "2000          68601.0          63573.0  \n",
+      "2001          66020.0          63752.0  \n",
+      "2002          61631.0          61318.0  \n",
+      "2003          63517.0          60570.0  \n",
+      "2004          58047.0          60588.0  \n",
+      "2005          61031.0          61518.0  \n",
+      "2006          62607.0          62388.0  \n",
+      "2007          61785.0          60618.0  \n",
+      "2008          60004.0          61949.0  \n",
+      "2009          55625.0          58259.0  \n",
       "\n",
       "\n",
       " DATA AFTER FORMATTING: \n",
@@ -464,50 +464,50 @@
       "     Unemployment               HouseIdx                         MedIncome  \\\n",
       "               CA    MI   PA          CA          MI          PA        CA   \n",
       "DATE                                                                         \n",
-      "1990          5.2   7.8  5.1  100.471193         NaN   93.362855   63333.0   \n",
-      "1991          7.1   8.8  6.6   95.569015   58.420806   89.706871   61797.0   \n",
-      "1992          8.5   9.4  7.5   92.786926   59.748947   88.573807   62517.0   \n",
-      "1993          9.7   7.6  7.3   85.246295   61.564205   89.065118   59529.0   \n",
-      "1994          9.2   7.1  6.6   77.395052   64.526663   88.988467   60464.0   \n",
-      "1995          7.7   5.2  5.8   76.376389   68.973289   89.670303   61846.0   \n",
-      "1996          7.7   4.9  5.9   73.919989   73.582339   88.655369   63176.0   \n",
-      "1997          6.8   4.7  5.3   74.536884   79.347642   88.775224   63245.0   \n",
-      "1998          6.0   4.0  4.7   81.035037   85.183613   90.108149   64349.0   \n",
-      "1999          5.6   3.9  4.5   92.140086   92.433567   94.188054   67156.0   \n",
-      "2000          5.0   3.3  4.1  101.031209  100.145625  100.871832   69696.0   \n",
-      "2001          4.8   4.4  4.3  112.031476  107.327208  113.794411   68413.0   \n",
-      "2002          6.5   6.4  5.5  122.706507  111.468549  127.245701   67600.0   \n",
-      "2003          6.8   6.6  5.8  145.752401  115.704198  146.676851   68695.0   \n",
-      "2004          6.5   6.8  5.5  178.773752  119.772720  169.535303   66782.0   \n",
-      "2005          5.8   7.2  5.2  221.471364  123.264823  210.799937   67918.0   \n",
-      "2006          5.0   6.8  4.7  268.208844  126.872678  250.272528   70316.0   \n",
-      "2007          4.9   6.9  4.3  270.804920  118.163891  241.411126   68890.0   \n",
-      "2008          6.0   7.1  4.7  226.111966  100.378575  215.656581   67865.0   \n",
-      "2009          9.7  10.9  7.0  167.831216   77.690858  174.183926   67051.0   \n",
+      "1990          5.2   7.7  5.2  100.471193         NaN   93.362855   64124.0   \n",
+      "1991          7.1   8.8  6.5   95.569015   58.420806   89.706871   62568.0   \n",
+      "1992          8.6   9.5  7.4   92.786926   59.748947   88.573807   63297.0   \n",
+      "1993          9.8   7.6  7.2   85.246295   61.564205   89.065118   60272.0   \n",
+      "1994          9.3   7.2  6.7   77.395052   64.526663   88.988467   61219.0   \n",
+      "1995          7.8   5.2  5.7   76.376389   68.973289   89.670303   62618.0   \n",
+      "1996          7.8   4.9  5.9   73.919989   73.582339   88.655369   63965.0   \n",
+      "1997          6.9   4.7  5.3   74.536884   79.347642   88.775224   64035.0   \n",
+      "1998          6.0   4.0  4.8   81.035037   85.183613   90.108149   65153.0   \n",
+      "1999          5.6   4.0  4.5   92.140086   92.433567   94.188054   67994.0   \n",
+      "2000          5.0   3.3  4.2  101.031209  100.145625  100.871832   70566.0   \n",
+      "2001          4.8   4.4  4.3  112.031476  107.327208  113.794411   69267.0   \n",
+      "2002          6.6   6.3  5.5  122.706507  111.468549  127.245701   68444.0   \n",
+      "2003          6.9   6.5  5.8  145.752401  115.704198  146.676851   69553.0   \n",
+      "2004          6.6   6.7  5.4  178.773750  119.772720  169.535303   67616.0   \n",
+      "2005          5.8   7.2  5.2  221.471348  123.264823  210.799935   68766.0   \n",
+      "2006          5.0   6.8  4.8  268.208801  126.872677  250.272523   71194.0   \n",
+      "2007          4.9   7.0  4.4  270.804836  118.163888  241.411114   69750.0   \n",
+      "2008          5.9   7.2  4.8  226.111844  100.378575  215.656550   68712.0   \n",
+      "2009          9.9  10.9  7.0  167.831065   77.690839  174.183883   67888.0   \n",
       "\n",
       "                        \n",
       "           MI       PA  \n",
       "DATE                    \n",
-      "1990  56954.0  55181.0  \n",
-      "1991  58957.0  55744.0  \n",
-      "1992  57795.0  53523.0  \n",
-      "1993  57064.0  54151.0  \n",
-      "1994  60384.0  54877.0  \n",
-      "1995  60872.0  57693.0  \n",
-      "1996  63849.0  56807.0  \n",
-      "1997  61728.0  59776.0  \n",
-      "1998  65744.0  61333.0  \n",
-      "1999  70942.0  58119.0  \n",
-      "2000  67755.0  62789.0  \n",
-      "2001  65206.0  62966.0  \n",
-      "2002  60871.0  60562.0  \n",
-      "2003  62734.0  59823.0  \n",
-      "2004  57331.0  59841.0  \n",
-      "2005  60278.0  60760.0  \n",
-      "2006  61835.0  61619.0  \n",
-      "2007  61024.0  59870.0  \n",
-      "2008  59264.0  61185.0  \n",
-      "2009  54939.0  57540.0  \n"
+      "1990  57665.0  55870.0  \n",
+      "1991  59693.0  56440.0  \n",
+      "1992  58517.0  54191.0  \n",
+      "1993  57776.0  54827.0  \n",
+      "1994  61138.0  55562.0  \n",
+      "1995  61632.0  58413.0  \n",
+      "1996  64646.0  57516.0  \n",
+      "1997  62499.0  60523.0  \n",
+      "1998  66564.0  62098.0  \n",
+      "1999  71828.0  58844.0  \n",
+      "2000  68601.0  63573.0  \n",
+      "2001  66020.0  63752.0  \n",
+      "2002  61631.0  61318.0  \n",
+      "2003  63517.0  60570.0  \n",
+      "2004  58047.0  60588.0  \n",
+      "2005  61031.0  61518.0  \n",
+      "2006  62607.0  62388.0  \n",
+      "2007  61785.0  60618.0  \n",
+      "2008  60004.0  61949.0  \n",
+      "2009  55625.0  58259.0  \n"
      ]
     }
    ],
@@ -647,12 +647,12 @@
        "      <th>1990</th>\n",
        "      <td>-0.71</td>\n",
        "      <td>-3.13</td>\n",
-       "      <td>-2.07</td>\n",
+       "      <td>-2.06</td>\n",
        "      <td>0.69</td>\n",
        "      <td>0.22</td>\n",
        "      <td>-0.46</td>\n",
        "      <td>4.44</td>\n",
-       "      <td>-5.00</td>\n",
+       "      <td>-4.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -663,21 +663,21 @@
        "      <td>0.01</td>\n",
        "      <td>-2.42</td>\n",
        "      <td>-0.03</td>\n",
-       "      <td>41.00</td>\n",
-       "      <td>70.00</td>\n",
+       "      <td>43.00</td>\n",
+       "      <td>69.00</td>\n",
        "      <td>25.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010</th>\n",
        "      <td>5.84</td>\n",
-       "      <td>5.16</td>\n",
-       "      <td>2.83</td>\n",
+       "      <td>5.15</td>\n",
+       "      <td>2.82</td>\n",
        "      <td>0.84</td>\n",
        "      <td>1.42</td>\n",
        "      <td>1.54</td>\n",
-       "      <td>-58.89</td>\n",
+       "      <td>-61.11</td>\n",
        "      <td>-71.11</td>\n",
-       "      <td>-26.67</td>\n",
+       "      <td>-24.44</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -687,16 +687,16 @@
        "       HouseIdx_pctch             MedIncome_pctch             unemploy_diff  \\\n",
        "state              CA    MI    PA              CA    MI    PA            CA   \n",
        "decade                                                                        \n",
-       "1990            -0.71 -3.13 -2.07            0.69  0.22 -0.46          4.44   \n",
-       "2000             7.52 -1.20  7.22            0.01 -2.42 -0.03         41.00   \n",
-       "2010             5.84  5.16  2.83            0.84  1.42  1.54        -58.89   \n",
+       "1990            -0.71 -3.13 -2.06            0.69  0.22 -0.46          4.44   \n",
+       "2000             7.52 -1.20  7.22            0.01 -2.42 -0.03         43.00   \n",
+       "2010             5.84  5.15  2.82            0.84  1.42  1.54        -61.11   \n",
        "\n",
        "                      \n",
        "state      MI     PA  \n",
        "decade                \n",
-       "1990    -5.00   0.00  \n",
-       "2000    70.00  25.00  \n",
-       "2010   -71.11 -26.67  "
+       "1990    -4.00   0.00  \n",
+       "2000    69.00  25.00  \n",
+       "2010   -71.11 -24.44  "
       ]
      },
      "execution_count": 11,
@@ -741,7 +741,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -755,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
