--- a/content/01/06_python.ipynb
+++ b/content/01/06_python.ipynb
@@ -61,6 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note: these cells aren't showing the answers on the website on purpose! \n",
+    "\n",
     "# YOU: TYPE ALL OF THESE OUT ON YOUR OTHER PARTICIPATION SHEET... YOU CAN OMIT THE COMMENTS IF YOU WANT\n",
     "# YOU: TRY VARIATIONS TOO...\n",
     "\n",
@@ -316,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`str`. There are built-in functions that work on strings directly"
+    "`str`. There are built-in functions that work on strings directly. Let's look at a few:"
    ]
   },
   {
@@ -559,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -661,15 +663,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (<ipython-input-7-4bfe94fa827f>, line 2)",
+     "evalue": "positional argument follows keyword argument (Temp/ipykernel_6932/3182615729.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-4bfe94fa827f>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(f(b=3,1))\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\DONSLA~1\\AppData\\Local\\Temp/ipykernel_6932/3182615729.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(f(b=3,1))\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -684,12 +686,14 @@
    "source": [
     "### Scope\n",
     "\n",
-    "I want you to be generally aware of the concept of \"global\" and \"local\" scope. Generally, python objects are available only within the region they are defined and subregions therein. Put differently, objects are available downstream, but not upstream."
+    "I want you to be generally aware of the concept of \"global\" and \"local\" scope. Generally, python objects are available only within the region they are defined and subregions therein. Put differently, objects are available downstream, but not upstream.\n",
+    "\n",
+    "Here is an example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +725,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-e4e4f48ed516>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxyz\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# variables defined INSIDE a function are NOT visible OUTSIDE the func\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\DONSLA~1\\AppData\\Local\\Temp/ipykernel_6932/3825219627.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxyz\u001b[0m\u001b[1;33m)\u001b[0m   \u001b[1;31m# variables defined INSIDE a function are NOT visible OUTSIDE the func\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'xyz' is not defined"
      ]
     }
@@ -731,8 +735,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a second example to show that changing the downstream variable _inside the function_ won't change the variable's value outside the function!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
