--- a/content/01/out_of_order1.ipynb
+++ b/content/01/out_of_order1.ipynb
@@ -5,7 +5,9 @@
    "id": "f0113509-1fe8-4bfb-90d6-f88c5f2ef43a",
    "metadata": {},
    "source": [
-    "You should open this file in Jupyter Lab on your computer, not on the website. If you do, you will see that the first block of code below has \"\\[3\\]\" next to it. \n",
+    "You should open this file in Jupyter Lab on your computer, not on the website!\n",
+    "\n",
+    "If you do, you will see that the first block of code below has \"\\[3\\]\" next to it. \n",
     "\n",
     "That means that `a=2 // b=3` is the THIRD code cell that I've run in this file! Where is the first and second chunks of code that I ran? Who knows!\n",
     "\n",
@@ -61,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
