--- a/content/03/01a_NumpyCS.ipynb
+++ b/content/03/01a_NumpyCS.ipynb
@@ -126,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 520 ms\n"
+      "Wall time: 624 ms\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11 ms\n"
+      "Wall time: 18.4 ms\n"
      ]
     }
    ],
@@ -212,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -226,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
