--- a/content/03/02g_commontasks.ipynb
+++ b/content/03/02g_commontasks.ipynb
@@ -1262,13 +1262,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>4.750000</td>\n",
+       "      <th>std</th>\n",
+       "      <td>1.870829</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.870829</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.250000</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1277,8 +1277,8 @@
       ],
       "text/plain": [
        "         data  ones\n",
-       "75%  4.750000     1\n",
-       "std  1.870829     1"
+       "std  1.870829     1\n",
+       "25%  2.250000     1"
       ]
      },
      "metadata": {},
@@ -1422,7 +1422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1436,7 +1436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
