--- a/content/03/05b_merging.ipynb
+++ b/content/03/05b_merging.ipynb
@@ -605,7 +605,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -620,12 +620,12 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -634,11 +634,11 @@
       "text/plain": [
        "   industry  x\n",
        "0         1  7\n",
-       "1         2  1\n",
+       "1         2  5\n",
        "2         3  0\n",
        "3         4  2\n",
-       "4         5  2\n",
-       "5         6  4"
+       "4         5  7\n",
+       "5         6  0"
       ]
      },
      "metadata": {},
@@ -648,7 +648,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STD if you calculate it before the merge: 2.503331114069145\n"
+      "STD if you calculate it before the merge: 3.271085446759225\n"
      ]
     }
    ],
@@ -679,7 +679,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "STD if you calculate it after the merge: 2.3176342617912282\n"
+      "STD if you calculate it after the merge: 3.028436654683167\n"
      ]
     }
    ],
@@ -737,7 +737,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -751,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
