working on links

--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "By the end of lecture one and before the next class, you should be able to and have completed:\n",
     "\n",
-    "1. Make a participation repo called \"Class Notes\" (with a blank README.md file). The repo on GitHub.com is called the \"master\" or \"origin\" repo. \n",
+    "1. Make a participation repo called \"Class Notes\" (with a blank README<area>.md file). The repo on GitHub.com is called the \"master\" or \"origin\" repo. \n",
     "2. \"Clone\" that to your computer. The folder and files on your computer are called the \"remote\" repo. \n",
     "3. Modify the repo **in the cloud** and, then, \"fetch\" those changes to your computer. Think of \"fetch\" as syncing your computer to catch up with any changes in the master.\n",
     "4. Modify the repo **on your computer**, and then, \"push\" those changes to the cloud. Think of \"push\" as syncing the master to catch up with any changes from your computer.\n",
@@ -173,7 +173,7 @@
     "### Practice\n",
     "\n",
     "- Fact: Git only pushes/tracks the _changes_ (called a _diff_) associated with a commit, so that it doesn't need to take a snapshot of all your files each time. \n",
-    "- View commit history of the [LeDataSciFi.github.io](https://github.com/LeDataSciFi/LeDataSciFi.github.io) repository by clicking on the \"commits\" button on the repo home page. (You'll end up [here](https://github.com/LeDataSciFi/LeDataSciFi.github.io/commits/master). \n",
+    "- View commit history of the [LeDataSciFi.github.io](https://github.com/LeDataSciFi/LeDataSciFi.github.io) repository by clicking on the \"commits\" button on the repo home page. (You'll end up [here](https://github.com/LeDataSciFi/LeDataSciFi.github.io/commits/master).)\n",
     "- View a recent \"diff\" by clicking on the description of the commit or the button with the _SHA_ or _hash_ code (something like `990cf9a`).\n",
     "    - **This is also useful for collaborators to see exactly what you changed.**\n",
     "- View the repository from a while back with the `<>` button.\n",
@@ -188,8 +188,8 @@
    "source": [
     "## Credits\n",
     "\n",
-    "- I have drawn heavily from [STAT545](stat545.stat.ubc.ca/)\n",
-    "- [QuantEcon.org](QuantEcon.org)\n",
+    "- I have drawn heavily from [STAT545](https://stat545.stat.ubc.ca/)\n",
+    "- [QuantEcon.org](https://quantecon.org/QuantEcon.org)\n",
     "- [EC607](https://raw.githack.com/uo-ec607/lectures/master/01-intro/01-Intro.html#1)\n"
    ]
   }
