stubborn autolink be gone

--- a/content/01/03_github.ipynb
+++ b/content/01/03_github.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "By the end of lecture one and before the next class, you should be able to and have completed:\n",
     "\n",
-    "1. Make a participation repo called \"Class Notes\" (with a blank README<area>.md file). The repo on GitHub.com is called the \"master\" or \"origin\" repo. \n",
+    "1. Make a participation repo called \"Class Notes\" (with a blank README<span>.</span>md file). The repo on GitHub.com is called the \"master\" or \"origin\" repo. \n",
     "2. \"Clone\" that to your computer. The folder and files on your computer are called the \"remote\" repo. \n",
     "3. Modify the repo **in the cloud** and, then, \"fetch\" those changes to your computer. Think of \"fetch\" as syncing your computer to catch up with any changes in the master.\n",
     "4. Modify the repo **on your computer**, and then, \"push\" those changes to the cloud. Think of \"push\" as syncing the master to catch up with any changes from your computer.\n",
