--- a/content/05/05_thefuture.ipynb
+++ b/content/05/05_thefuture.ipynb
@@ -50,7 +50,7 @@
     "Not only are dashboards cool as hell, they are also good ways to show off your skills (e.g. put them on your resume) because they can be really useful for real-world decision makers. \n",
     "```\n",
     "\n",
-    "[How do you think this amazing page was built?](https://perthirtysix.com/essay/nba-player-scoring-analysis) Or the interactive visualizations [538, NYT, WaPo, WSJ and others frequently publish](https://fivethirtyeight.com/features/science-isnt-broken/)? And look at all [these freaking awesome examples!](https://dash-gallery.plotly.host/Portal/)  \n",
+    "[How do you think this amazing page was built?](https://www.perthirtysix.com/essay/nba-player-scoring-analysis) Or the interactive visualizations [538, NYT, WaPo, WSJ and others frequently publish](https://fivethirtyeight.com/features/science-isnt-broken/)? And look at all [these freaking awesome examples!](https://dash.gallery/Portal/)  \n",
     "\n",
     "_All you need to build a dashboard is data acquisition and formatting skills - which you have!_\n",
     "\n",
